--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-fast-marquee": "^1.6.0",
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-snap-carousel": "^0.3.2",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
