--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
+    "env-cmd": "^10.1.0",
     "firebase": "^10.6.0",
     "hamburger-react": "^2.5.0",
     "mdb-ui-kit": "^7.1.0",
@@ -25,6 +26,8 @@
     "web-vitals": "^3.5.0"
   },
   "scripts": {
+    "star:dev":"env-cmd -f .env.dev react-scripts start",
+    "star:prod":"env-cmd -f .env.prod react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
