--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "web-vitals": "^3.5.0"
   },
   "scripts": {
-    "star:dev":"env-cmd -f .env.dev react-scripts start",
+    "start:dev":"env-cmd -f .env.dev react-scripts start",
     "star:prod":"env-cmd -f .env.prod react-scripts start",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "env-cmd -f .env.prod react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
